// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stripe webhook handler service when handling entitlements changes will handle a change in account tier 1`] = `
{
  "options": {
    "newTier": "Show Owner Membership",
    "previousTier": "Pro Membership",
    "title": "Membership Updated",
    "type": "membershipChanged",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Membership updated",
  "to": {
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service when handling entitlements changes will handle a new membership activation 1`] = `
{
  "options": {
    "newTier": "Pro Membership",
    "title": "Membership activated!",
    "type": "newMembership",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Membership activated",
  "to": {
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service when handling invoice events will handle an invoice finalized event 1`] = `
{
  "options": {
    "amounts": {
      "due": "$20.00",
      "paid": "$0.00",
      "remaining": "$20.00",
    },
    "currency": "USD",
    "downloadUrl": "https://pay.stripe.com/invoice/acct_1PktwnI1ADsIvyhF/test_YWNjdF8xUGt0d25JMUFEc0l2eWhGLF9RclBhSjVsWUViQlBrTWo5ZHdPREtZNlpISHVXdGpOLDExNzA0MDk4NQ0200Rhcub439/pdf?s=ap",
    "invoiceDate": "LLL",
    "items": [
      {
        "description": "(created by Stripe CLI)",
        "quantity": 1,
        "total": "$20.00",
        "unitPrice": "$20.00",
      },
    ],
    "period": {
      "end": "LL",
      "start": "LL",
    },
    "subtitle": "Your Latest Invoice",
    "title": "Bottom Time Membership",
    "totals": {
      "subtotal": "$20.00",
      "total": "$20.00",
    },
    "type": "invoice",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Latest invoice for Bottom Time membership",
  "to": {
    "bcc": "admin@bottomti.me",
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service when handling payment issue events will handle a payment failed event 1`] = `
{
  "options": {
    "paymentAmount": "$20.00",
    "paymentDue": "LL",
    "paymentUrl": "http://localhost:4850/membership/confirmation",
    "subtitle": "Your Attention is Required ⚠️",
    "title": "Payment Issue",
    "type": "paymentFailed",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Important! Please update your payment info.",
  "to": {
    "cc": "admin@bottomti.me",
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service when handling payment issue events will handle an action required event 1`] = `
{
  "options": {
    "paymentAmount": "$20.00",
    "paymentDue": "LL",
    "paymentUrl": "http://localhost:4850/membership/confirmation",
    "subtitle": "Your Attention is Required ⚠️",
    "title": "Payment Issue",
    "type": "paymentFailed",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Important! Please update your payment info.",
  "to": {
    "cc": "admin@bottomti.me",
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service will handle a membership cancelation event 1`] = `
{
  "options": {
    "title": "Membership Canceled",
    "type": "membershipCanceled",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Membership canceled",
  "to": {
    "to": "user@email.com",
  },
}
`;

exports[`Stripe webhook handler service will handle a trial-will-end event 1`] = `
{
  "options": {
    "endDate": "LL",
    "title": "Your Trial Period Is Ending Soon",
    "type": "trialEnding",
    "user": {
      "email": "user@email.com",
      "profile": {
        "name": "User Man",
      },
      "username": "userman.32",
    },
  },
  "subject": "Your free trial of Bottom Time is ending soon...",
  "to": {
    "to": "user@email.com",
  },
}
`;
